[package]
name = "wof-stats-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26" }
indicatif = "0.17.6"
polars = { version = "0.31.1", features = ["timezones", "dtype-datetime"] }
scraper = "0.17.1"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.104"
